# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

import("//build/lite/config/component/lite_component.gni")

build_ext_component("libpng") {
    outdir = rebase_path("$root_out_dir")
    command = "./build.sh ${outdir}"
    exec_path = rebase_path(".", root_build_dir)
}

lite_component("png") {
    deps = [
        ":libpng"
    ]
    deps += [
        "//build/lite/config/component/zlib:zlib_shared",
    ]
    features = []
}
